# GNN_villes

./: .gitignore  1_attrib_OCS.py  2_bdalti_download.py  3_rasterize_carreaux_1km.py  4_stats_altitude_slope_1km.py  5_mapping_grid_commune.py  6_contiguite.py  7_node_final.py  8_construction_edges.py  LICENSE  README  README.md  bdtopo.py  launch.sh  out.sh  prepa_donnees.ipynb  pyproject.toml
src/preprocessing/: amenities_processing.py  bdtopo.py  cities_processing.py  data_io.py  graph_utils.py  io.py  main.py  tile_processing.py
src/processing/: analysis.py  dataset.py  datasets.py  inference.py  model.py  train.py  zoom_paris.py
