
[project]
name = "GNN_CITIES"
version = "0.1.0"
description = "GNN on Geographic Data"
authors = [
  { name = "Benoit Hurpeau", email = "benoit.hurpeau@insee.fr" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "community>=1.0.0b1", 
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "hdbscan>=0.8.40",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch==2.5.0",
    "torch-geometric>=2.6.1",
    "hdbscan>=0.8.40",
    "scipy>=1.16.2",
    "optuna>=4.5.0",
    "matplotlib>=3.10.7",
    "libpysal>=4.13.0",
    "pyarrow>=22.0.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv]
src = "src"

[project.scripts]
prepare-gnn-data = "preprocessing.main:main"
